Total sass theme work-in-progress

--- a/_includes/demo/syntax-theme-swatches.html
+++ b/_includes/demo/syntax-theme-swatches.html
@@ -1,108 +1,198 @@
-<div class="columns">
+<div class="columns is-variable is-1 is-vcentered is-multiline">
     <div class="column is-1">
-        <div class="cell is-center-text syntax-container-color">bg</div>
+        <div class="yolo-swatch syntax-container-color">bg</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-text-color">text</div>
+        <div class="yolo-swatch syntax-text-color">text</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-highlight-line-color">hll</div>
-    </div>
-</div>
-<div class="columns">
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-error-color">err</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-punctuation-color">p</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-text-whitespace-color">w</div>
+        <div class="yolo-swatch syntax-highlight-line-color">hll</div>
     </div>
 </div>
-<div class="columns">
+<div class="columns is-variable is-1 is-vcentered is-multiline">
     <div class="column is-1">
-        <div class="cell is-center-text syntax-comment-color">c</div>
+        <div class="yolo-swatch syntax-error-color">err</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-comment-hashbang-color">ch</div>
+        <div class="yolo-swatch syntax-punctuation-color">p</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-comment-multiline-color">cm</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-comment-preproc-color">cp</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-comment-preprocfile-color">cpf</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-comment-single-color">c1</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-comment-special-color">cs</div>
+        <div class="yolo-swatch syntax-text-whitespace-color">w</div>
     </div>
 </div>
-<div class="columns">
+<div class="columns is-variable is-1 is-vcentered is-multiline">
     <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-deleted-color">gd</div>
+        <div class="yolo-swatch syntax-comment-color">c</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-emph-color">ge</div>
+        <div class="yolo-swatch syntax-comment-hashbang-color">ch</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-error-color">ge</div>
+        <div class="yolo-swatch syntax-comment-multiline-color">cm</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-heading-color">gh</div>
+        <div class="yolo-swatch syntax-comment-preproc-color">cp</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-inserted-color">gi</div>
+        <div class="yolo-swatch syntax-comment-preprocfile-color">cpf</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-output-color">go</div>
+        <div class="yolo-swatch syntax-comment-single-color">c1</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-prompt-color">gp</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-strong-color">gs</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-subheading-color">gu</div>
-    </div>
-    <div class="column is-1">
-        <div class="cell is-center-text syntax-generic-traceback-color">gt</div>
+        <div class="yolo-swatch syntax-comment-special-color">cs</div>
     </div>
 </div>
-<div class="columns">
+<div class="columns is-variable is-1 is-vcentered is-multiline">
     <div class="column is-1">
-        <div class="cell is-center-text syntax-keyword-color">k</div>
+        <div class="yolo-swatch syntax-generic-deleted-color">gd</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-keyword-constant-color">kc</div>
+        <div class="yolo-swatch syntax-generic-emph-color">ge</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-keyword-declaration-color">kd</div>
+        <div class="yolo-swatch syntax-generic-error-color">ge</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-keyword-namespace-color">kn</div>
+        <div class="yolo-swatch syntax-generic-heading-color">gh</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-keyword-pseudo-color">kp</div>
+        <div class="yolo-swatch syntax-generic-inserted-color">gi</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-keyword-reserved-color">kr</div>
+        <div class="yolo-swatch syntax-generic-output-color">go</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-keyword-type-color">kt</div>
+        <div class="yolo-swatch syntax-generic-prompt-color">gp</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-generic-strong-color">gs</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-generic-subheading-color">gu</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-generic-traceback-color">gt</div>
     </div>
 </div>
-<div class="columns">
+<div class="columns is-variable is-1 is-vcentered is-multiline">
     <div class="column is-1">
-        <div class="cell is-center-text syntax-literal-color">l</div>
+        <div class="yolo-swatch syntax-keyword-color">k</div>
     </div>
     <div class="column is-1">
-        <div class="cell is-center-text syntax-literal-date-color">ld</div>
+        <div class="yolo-swatch syntax-keyword-constant-color">kc</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-keyword-declaration-color">kd</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-keyword-namespace-color">kn</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-keyword-pseudo-color">kp</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-keyword-reserved-color">kr</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-keyword-type-color">kt</div>
+    </div>
+</div>
+<div class="columns is-variable is-1 is-vcentered is-multiline">
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-literal-color">l</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-literal-date-color">ld</div>
+    </div>
+</div>
+<div class="columns is-variable is-1 is-vcentered is-multiline">
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-color">n</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-attribute-color">na</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-builtin-pseudo-color">bq</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-builtin-color">nb</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-class-color">nc</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-constant-color">no</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-decorator-color">nd</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-entity-color">ni</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-exception-color">ne</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-function-magic-color">fm</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-function-color">nf</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-label-color">nl</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-namespace-color">nn</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-other-color">nx</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-tag-color">nt</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-variable-color">nv</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-variable-class-color">vc</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-variable-global-color">vg</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-name-variable-instance-color">vi</div>
+    </div>
+</div>
+<div class="columns is-variable is-1 is-vcentered is-multiline">
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-number-color">m</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-number-bin-color">mb</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-number-float-color">mf</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-number-hex-color">mh</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-number-integer-long-color">il</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-number-integer-color">mi</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-number-oct-color">mo</div>
+    </div>
+</div>
+<div class="columns is-variable is-1 is-vcentered is-multiline">
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-operator-color">o</div>
+    </div>
+    <div class="column is-1">
+        <div class="yolo-swatch syntax-operator-word-color">ow</div>
     </div>
 </div>
