--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -7,6 +7,7 @@
 <!-- Material Icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!-- Main site stylesheet, generated via sass -->
+<link rel="stylesheet" href="{{ '/css/brand.css' | relative_url }}" />
 <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}" />
 <!-- Add custom css if ext_css front-matter exists -->
 {% if page.ext_css.size > 0 %}
