--- a/_sass/yolo/brand/theme/_newwave.scss
+++ b/_sass/yolo/brand/theme/_newwave.scss
@@ -1,49 +1,48 @@
 // ----------------------------------------------------------------------------
-// newwave theme
+// newwave light-mode
 // ----------------------------------------------------------------------------
-:root[light] {
-  // primary colors
-  --primary-color: #dee1f7;
-  --on-primary-color: #060823;
-  --primary-container-color: #251359;
-  --on-primary-container-color: #bf3efd;
-  // secondary colors  
-  --secondary-color: #1042ff;
-  --on-secondary-color: #ebefff;
-  --secondary-container-color: #251359;
-  --on-secondary-container-color: #bf3efd;
-  // tertiary colors  
-  --tertiary-color: #f9246c;
-  --on-tertiary-color: #feebf2;
-  // general colors    
-  --link-color: #4597ff;
-  --neutral-color: #212121;
-  --on-neutral-color: #e0e0e0;
-  // font families  
-  --font-family-primary: "Red Hat Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
-:root[dark] {
-  // primary colors
-  --primary-color: #060823;
-  --on-primary-color: #cacef7;
-  --primary-container-color: #251359;
-  --on-primary-container-color: #bf3efd;
-  // secondary colors  
-  --secondary-color: #f9246c;
-  --on-secondary-color: #090b35;
-  --secondary-container-color: #251359;
-  --on-secondary-container-color: #bf3efd;
-  // tertiary colors  
-  --tertiary-color: #3b6afe;
-  --on-tertiary-color: #090b35;
-  // general colors  
-  --link-color: #4f9dff;
-  --neutral-color: #e0e0e0;
-  --on-neutral-color: #212121;  
-  // font families  
-  --font-family-primary: "Red Hat Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
+// primary colors
+$light-primary-color: #dee1f7;
+$light-on-primary-color: #060823;
+$light-primary-container-color: #251359;
+$light-on-primary-container-color: #bf3efd;
+// secondary colors
+$light-secondary-color: #1042ff;
+$light-on-secondary-color: #ebefff;
+$light-secondary-container-color: #251359;
+$light-on-secondary-container-color: #bf3efd;
+// tertiary colors
+$light-tertiary-color: #f9246c;
+$light-on-tertiary-color: #feebf2;
+// general colors
+$light-link-color: #4597ff;
+$light-neutral-color: #212121;
+$light-on-neutral-color: #e0e0e0;
+// font families
+$light-font-family-primary: "Red Hat Mono", monospace;
+$light-font-family-secondary: "Red Hat Text", sans-serif;
+$light-font-family-monospace: "Source Code Pro", monospace;
+// ----------------------------------------------------------------------------
+// newwave dark-mode
+// ----------------------------------------------------------------------------
+// primary colors
+$dark-primary-color: #060823;
+$dark-on-primary-color: #cacef7;
+$dark-primary-container-color: #251359;
+$dark-on-primary-container-color: #bf3efd;
+// secondary colors
+$dark-secondary-color: #f9246c;
+$dark-on-secondary-color: #090b35;
+$dark-secondary-container-color: #251359;
+$dark-on-secondary-container-color: #bf3efd;
+// tertiary colors
+$dark-tertiary-color: #3b6afe;
+$dark-on-tertiary-color: #090b35;
+// general colors
+$dark-link-color: #4f9dff;
+$dark-neutral-color: #e0e0e0;
+$dark-on-neutral-color: #212121;
+// font families
+$dark-font-family-primary: "Red Hat Mono", monospace;
+$dark-font-family-secondary: "Red Hat Text", sans-serif;
+$dark-font-family-monospace: "Source Code Pro", monospace;
